# sg-build-hackathon-growth

./: .gitignore  AGENTS.md  README.md  database.py  main.py  pyproject.toml
data/: mock_companies.json  schemes.json
frontend/: README.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/business/api/: route.ts
frontend/app/api/match/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/interstitial/: page.tsx
frontend/app/login/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/onboarding-1-playback/: page.tsx
frontend/app/onboarding-2/: page.tsx
frontend/app/profile/: page.tsx
frontend/components/: bottom-nav.tsx  logo-bar.tsx
frontend/lib/: business-api.ts  profile-context.tsx
frontend/styles/: globals.css
fundingfit-api/: .env.example  .gitignore  MATCHING.md  README.md  database.py  main.py  pyproject.toml
fundingfit-api/data/: companies.json  schemes.json
fundingfit-api/models/: business.py
fundingfit-api/routers/: business.py  goals.py  match.py
fundingfit-api/services/: claude_service.py  companies_house_service.py  identity_service.py  matching_service.py
fundingfit-api/tests/: conftest.py  test_matching.py
models/: scheme.py
routers/: business.py  history.py  identify.py  match.py  plan.py  schemes.py
services/: claude_service.py  companies_house_service.py  identity_service.py  schemes_service.py
