[project]
name = "fundingfit-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.101.0",
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.46.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0"]
